apps/phase3-ingress-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-svc
  namespace: phase3-demo
spec:
  type: ClusterIP
  selector:
    app: nginx-demo
  ports:
  - port: 80
    targetPort: 80
